Fix popover z-index

--- a/src/files/popover/css/basic.css
+++ b/src/files/popover/css/basic.css
@@ -1,3 +1,3 @@
-.aui-popover {
+.popover {
   z-index: 1 !important;
 }
